feat: [stable] [done] [tested] Release candidate for codexstester simple - release 1.0.9